--- a/code/create_superimposed_video_from_MP4.ipynb
+++ b/code/create_superimposed_video_from_MP4.ipynb
@@ -62,7 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Creates an MP4 video file with mask overlay generated from model.\\n\\n    :param source_dir: directory containing a 'data' directory that contains base images\\n    :param model: Keras trained model that will generate mask based on images\\n    :param description: dictionary containing entries describing model\\n    :param target_dir: directory where video will be saved\\n    :param filename: (opt) filename to save video as. Defaults to overlay_text if not provided\\n    :param batch_size: Number of images to convert at a time.  If none, all files in dir will be converted at once\\n    :param overlay_text: text that will be overlaied on top line of video\\n    :param color: (bool) If true, video will be in color.  If empty, defaults to description value.\\n    :param fps: Frames per second. Default 20 fps.\\n    :param follow_bias: Must be >0.  >1 increases follow area.  <1 decreases follow area.\\n    :param follow_intensity_adj: Must be >0.  >1 increases intensity of color.\\n    :param avoid_bias: Must be >0.  >1 increases avoid area.  <1 decreases avoid area.\\n    :param avoid_intensity_adj: Must be >0.  >1 increases intensity of color.\\n    :param img_mask_ratio: Must be >0 and <1.  Percentage of image intensity under mask areas.\\n    :return: Path to video created\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success: Created Directory:  /Volumes/Photos-BACKUP/89FinalProject/testVideo/images/data\n"
+      "Success: Path Already Exists:  /Volumes/Photos-BACKUP/89FinalProject/testVideo/images/data\n"
      ]
     }
    ],
@@ -86,7 +104,7 @@
     "# Create Temp Directory for processing extract JPG frames\n",
     "source_video_path = os.path.dirname(source_video_filepath)\n",
     "temp_dir = os.path.join(source_video_path,'images','data')\n",
-    "\n",
+    "extract_exists = False\n",
     "try:\n",
     "    os.mkdir(os.path.join(source_video_path,'images'))  \n",
     "    os.mkdir(os.path.join(source_video_path,'images', 'data'))  \n",
@@ -95,12 +113,13 @@
     "        os.mkdir(temp_dir)\n",
     "        print(\"Success: Created Directory: \", temp_dir)\n",
     "    except(FileExistsError):\n",
-    "        print(\"Success: Path Already Exists: \", temp_dir)\n"
+    "        print(\"Success: Path Already Exists: \", temp_dir)\n",
+    "        extract_exists = True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +135,6 @@
     "        ret, frame = cap.read()\n",
     " \n",
     "        if ret == True:\n",
-    "#             print('Read %d frame: ' % count, ret)\n",
     "            cv2.imwrite(os.path.join(targetdir, \"frame{:d}.jpg\".format(count)), frame)  # save frame as JPEG file\n",
     "            count += 1\n",
     "        else:\n",
@@ -131,17 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You only need to do this once per video\n",
-    "fps = extractFrames(source_video_filepath, temp_dir)"
+    "# You only need to do this once per video.\n",
+    "# Doesn't execute if directory already exists\n",
+    "if not extract_exists:\n",
+    "    extractFrames(source_video_filepath, temp_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +201,7 @@
        "59.94005994005994"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,53 +214,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From /anaconda3/envs/dl/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "WARNING:tensorflow:From /anaconda3/envs/dl/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
+      "WARNING:tensorflow:From /anaconda3/envs/dl/lib/python3.6/site-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n",
       "Creating test image generator:\n",
       "\t/Volumes/Photos-BACKUP/89FinalProject/testVideo/images\n",
       "Found 4239 images belonging to 1 classes.\n",
-      "Processing 4239 images in 34 batches.\n",
+      "Processing 4239 images in 17 batches.\n",
       "Creating video name:  /Volumes/Photos-BACKUP/89FinalProject/testVideo/1558355901_CNN_encoder2400_epochs=40_notes=rot30-.6-1.0zoom_dropout=.4BEST.mp4\n",
       "FPS:  59.94005994005994\n",
-      "Processing batch: 1/34 | Max/Min/Avg mask value: 97.87000274658203/0.05999999865889549/26.530000686645508\n",
-      "Processing batch: 2/34 | Max/Min/Avg mask value: 100.83999633789062/0.019999999552965164/31.700000762939453\n",
-      "Processing batch: 3/34 | Max/Min/Avg mask value: 108.70999908447266/0.03999999910593033/33.650001525878906\n",
-      "Processing batch: 4/34 | Max/Min/Avg mask value: 105.87000274658203/0.05000000074505806/32.279998779296875\n",
-      "Processing batch: 5/34 | Max/Min/Avg mask value: 124.36000061035156/-0.0/30.399999618530273\n",
-      "Processing batch: 6/34 | Max/Min/Avg mask value: 111.2699966430664/0.05000000074505806/32.16999816894531\n",
-      "Processing batch: 7/34 | Max/Min/Avg mask value: 114.25/0.009999999776482582/32.439998626708984\n",
-      "Processing batch: 8/34 | Max/Min/Avg mask value: 114.79000091552734/-0.0/29.649999618530273\n",
-      "Processing batch: 9/34 | Max/Min/Avg mask value: 124.1500015258789/0.07999999821186066/21.100000381469727\n",
-      "Processing batch: 10/34 | Max/Min/Avg mask value: 126.11000061035156/0.11999999731779099/18.860000610351562\n",
-      "Processing batch: 11/34 | Max/Min/Avg mask value: 132.25/0.10000000149011612/18.3799991607666\n",
-      "Processing batch: 12/34 | Max/Min/Avg mask value: 131.75/0.10999999940395355/20.09000015258789\n",
-      "Processing batch: 13/34 | Max/Min/Avg mask value: 134.49000549316406/0.09000000357627869/18.850000381469727\n",
-      "Processing batch: 14/34 | Max/Min/Avg mask value: 134.63999938964844/0.07999999821186066/19.190000534057617\n",
-      "Processing batch: 15/34 | Max/Min/Avg mask value: 133.11000061035156/0.10000000149011612/19.239999771118164\n",
-      "Processing batch: 16/34 | Max/Min/Avg mask value: 133.32000732421875/0.07000000029802322/18.549999237060547\n",
-      "Processing batch: 17/34 | Max/Min/Avg mask value: 130.63999938964844/0.019999999552965164/19.829999923706055\n",
-      "Processing batch: 18/34 | Max/Min/Avg mask value: 131.10000610351562/-0.0/19.860000610351562\n",
-      "Processing batch: 19/34 | Max/Min/Avg mask value: 131.69000244140625/0.05000000074505806/22.899999618530273\n",
-      "Processing batch: 20/34 | Max/Min/Avg mask value: 139.57000732421875/0.10000000149011612/25.079999923706055\n",
-      "Processing batch: 21/34 | Max/Min/Avg mask value: 133.6199951171875/-0.0/28.729999542236328\n",
-      "Processing batch: 22/34 | Max/Min/Avg mask value: 138.19000244140625/-0.0/28.579999923706055\n",
-      "Processing batch: 23/34 | Max/Min/Avg mask value: 125.75/-0.0/37.79999923706055\n",
-      "Processing batch: 24/34 | Max/Min/Avg mask value: 126.08999633789062/-0.0/47.13999938964844\n",
-      "Processing batch: 25/34 | Max/Min/Avg mask value: 125.19000244140625/-0.0/46.099998474121094\n",
-      "Processing batch: 26/34 | Max/Min/Avg mask value: 131.0399932861328/0.0/47.41999816894531\n",
-      "Processing batch: 27/34 | Max/Min/Avg mask value: 131.27000427246094/-0.0/41.45000076293945\n",
-      "Processing batch: 28/34 | Max/Min/Avg mask value: 135.22000122070312/-0.0/32.63999938964844\n",
-      "Processing batch: 29/34 | Max/Min/Avg mask value: 137.0500030517578/-0.0/44.209999084472656\n",
-      "Processing batch: 30/34 | Max/Min/Avg mask value: 110.05999755859375/0.17000000178813934/43.599998474121094\n",
-      "Processing batch: 31/34 | Max/Min/Avg mask value: 115.4000015258789/0.07999999821186066/37.189998626708984\n",
-      "Processing batch: 32/34 | Max/Min/Avg mask value: 117.12999725341797/0.18000000715255737/31.670000076293945\n",
-      "Processing batch: 33/34 | Max/Min/Avg mask value: 96.6500015258789/-0.0/20.3799991607666\n",
-      "Processing batch: 34/34 | Max/Min/Avg mask value: 92.01000213623047/0.25999999046325684/23.920000076293945\n",
+      "Processing batch {}/{} 0 17\n",
+      "Processing batch {}/{} 1 17\n",
+      "Processing batch {}/{} 2 17\n",
+      "Processing batch {}/{} 3 17\n",
+      "Processing batch {}/{} 4 17\n",
+      "Processing batch {}/{} 5 17\n",
+      "Processing batch {}/{} 6 17\n",
+      "Processing batch {}/{} 7 17\n",
+      "Processing batch {}/{} 8 17\n",
+      "Processing batch {}/{} 9 17\n",
+      "Processing batch {}/{} 10 17\n",
+      "Processing batch {}/{} 11 17\n",
+      "Processing batch {}/{} 12 17\n",
+      "Processing batch {}/{} 13 17\n",
+      "Processing batch {}/{} 14 17\n",
+      "Processing batch {}/{} 15 17\n",
+      "Processing batch {}/{} 16 17\n",
       "Video created /Volumes/Photos-BACKUP/89FinalProject/testVideo/1558355901_CNN_encoder2400_epochs=40_notes=rot30-.6-1.0zoom_dropout=.4BEST.mp4\n"
      ]
     }
@@ -251,10 +263,14 @@
     "    data = pickle_load(os.path.join(pickel_filepath, pickle_name))\n",
     "    description = data[0]\n",
     "    model = data[1]\n",
-    "    pf_video.create_video_with_test_data(source_video_path, model, description, source_video_path, \n",
-    "                                         batch_size=128, \n",
-    "                                         fps=fps,\n",
-    "                                         invert=True)"
+    "    pf_video.create_video_with_mask(source_video_path, model, description, source_video_path,\n",
+    "                                    batch_size=256,\n",
+    "                                    fps=fps,\n",
+    "                                    follow_bias=0.85,\n",
+    "                                    follow_intensity_adj=2.1,\n",
+    "                                    avoid_bias=0.5,\n",
+    "                                    avoid_intensity_adj=0.7,\n",
+    "                                    img_mask_ratio=0.6)"
    ]
   },
   {
